chore: update dependencies and integrate Tailwind CSS
- Added Tailwind CSS, PostCSS, and Autoprefixer to package.json.
- Included Tailwind CSS in the Vite configuration.
- Created app.css to import Tailwind CSS styles.
- Updated app.html to link the new app.css stylesheet.
- Modified the main page (+page.svelte) to use Tailwind CSS classes for styling.

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+	<link rel="stylesheet" href="../src/lib/app.css">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
