--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
-	<link rel="stylesheet" href="../src/lib/app.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="relative min-h-screen bg-gray-500 text-slate-600 text-sm sm:text-base flex flex-col myBox">
+		<div class="inset-0 opacity-5 absolute z[-1]"></div>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
