--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="relative min-h-screen bg-gray-500 text-slate-600 text-sm sm:text-base flex flex-col myBox">
+	<body data-sveltekit-preload-data="hover" class="relative min-h-screen bg-gray-800 text-slate-600 text-sm sm:text-base flex flex-col ">
 		<div class="inset-0 opacity-5 absolute z[-1]"></div>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
